crates/bc-cli/tests/cli/snapshots/cli__import__import_missing_profile_returns_error.snap
---
source: crates/bc-cli/tests/cli/import.rs
expression: output
---
success: false
exit_code: 2
----- stdout -----
----- stderr -----
error: not found: import profile 'nonexistent'
