crates/bc-cli/tests/cli/snapshots/cli__import__rejected_for_an_unknown_account_is_an_error.snap
---
source: crates/bc-cli/tests/cli/import.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: no account 'Assets:Nowhere'
