crates/bc-cli/tests/cli/snapshots/cli__import__rejected_on_an_empty_ledger.snap
---
source: crates/bc-cli/tests/cli/import.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
No rejected statement rows.
----- stderr -----
