crates/bc-cli/tests/cli/snapshots/cli__import__rejected_on_an_empty_ledger_as_json.snap
---
source: crates/bc-cli/tests/cli/import.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
[]
----- stderr -----
