crates/bc-cli/tests/cli/snapshots/cli__import__release_of_a_malformed_id_is_an_error.snap
---
source: crates/bc-cli/tests/cli/import.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: data error: nonsense is neither a source_ref_… nor a transaction_… id
