crates/bc-cli/tests/cli/snapshots/cli__import__release_of_an_unknown_group_is_an_error.snap
---
source: crates/bc-cli/tests/cli/import.rs
expression: output
---
success: false
exit_code: 2
----- stdout -----
----- stderr -----
error: not found: no rejected statement rows for transaction [TRANSACTION_ID]
